# secure-db-manager

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
deploy/: baseport-server.service  nginx.conf
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows.manifest
src-tauri/icons/: icon.icns
src-tauri/src/: app_context.rs  event_emitter.rs  lib.rs  local_store.rs  main.rs  secrets.rs  types.rs
src-tauri/src/commands/: config.rs  docker.rs  exposure.rs  hosts.rs  instances.rs  mod.rs  web_apps.rs
src-tauri/src/server/: auth.rs  config.rs  events.rs  mod.rs  routes.rs  state.rs
src/components/: app-shell.tsx  auth-guard.tsx  sidebar.tsx  status-badge.tsx  theme-toggle.tsx  top-bar.tsx
src/features/docker/: docker-status-card.tsx
src/features/exposures/: expose-wizard.tsx
src/features/hosts/: add-host-wizard.tsx
src/features/instances/: backup-manager.tsx  connection-strings.tsx  create-instance-wizard.tsx  logs-viewer.tsx
src/features/web-apps/: create-web-app-wizard.tsx  web-app-connection-info.tsx  web-app-logs-viewer.tsx
src/lib/: auth-context.tsx  backup-schedules.ts  connection-strings.ts  projects.tsx  settings.ts  tauri.ts  transport.ts
src/routes/: audit-logs.tsx  backups.tsx  dashboard.tsx  docker.tsx  exposures.tsx  hosts.tsx  local-instances.tsx  login.tsx  placeholder.tsx  settings.tsx  web-apps.tsx
src/styles/: globals.css
